<resources>
    <string name="app_name">Excuse Me</string>
    <string name="your_full_name">Your Full Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="your_city">Your City</string>
    <string name="inquiry">Inquiry</string>
    <string name="upload_your_story">Upload Your Story</string>
    <string name="title">Title</string>
    <string name="heading">Heading</string>
    <string name="desc">Description</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="search">Search</string>
    <string name="search_stories">Search Stories</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="my_bookmark">My Bookmarks</string>
    <string name="service_key">507d694b-d3db-41d8-8c3a-955a3544abcc</string>
    <string name="Get_Started">Get Started</string>
    <string name="submit">submit</string>
    <string name="Tending_Story">Trending Story</string>
    <string name="no_record_found">No Record Found.!</string>
    <string name="loading">Loading...</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Upload">Upload</string>
    <string name="Profile">Profile</string>
    <string name="For_You">For You</string>
    <string name="Loading">Loading...</string>
    <string name="Other_Stories">Other Stories</string>
    <string name="no_bookmarks_saved">No Bookmark Saved.</string>
</resources>