<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
        <EditText
            android:id="@+id/edt_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_textbox"
            android:hint="@string/your_full_name"
            android:singleLine="true"
            android:padding="15dp"
            android:textColor="@color/textbox_hint"
            android:textColorHint="@color/textbox_hint"
            android:maxLines="1"
            android:nextFocusDown="@id/edt_mobile"/>
        <EditText
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_textbox"
            android:hint="@string/mobile_no"
            android:layout_below="@+id/edt_fullname"
            android:singleLine="true"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:textColor="@color/textbox_hint"
            android:textColorHint="@color/textbox_hint"
            android:nextFocusDown="@id/edt_city"
            android:inputType="number"/>
        <EditText
            android:id="@+id/edt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_textbox"
            android:hint="@string/your_city"
            android:singleLine="true"
            android:layout_below="@+id/edt_mobile"
            android:padding="15dp"
            android:textColor="@color/textbox_hint"
            android:textColorHint="@color/textbox_hint"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:nextFocusDown="@id/btn_submit" />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="SUBMIT"
            android:textSize="18dp"
            android:layout_below="@+id/edt_city"
            android:background="@drawable/submit_button"
            android:layout_centerHorizontal="true"
            android:hint="@string/your_full_name"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_below="@+id/btn_submit">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/screen_icon_logo"
                    />
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textbox_hint"
                android:text="At NewsApp We Respect Your Privacy. By Continuing You Agree With T &amp; C. \n© 2021-2022"
                android:layout_alignParentBottom="true"
                android:padding="10dp"
                android:gravity="center"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>