<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.excuseme.newsapp.apputils.CustomVerticalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/edt_logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/upload_story_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/upload_your_story"
                    android:textColor="@color/textbox_hint"
                    android:textSize="@dimen/sp_22"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

            <LinearLayout
                android:id="@+id/lincontact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="Guideline: Make sure that any information related to pornographic subjects is strictly prohibited. The behavior of public violation content is also not allowed. Post your own stories &amp; information in a positive way only. Readers can share it if the story feels more adorable."
                    android:textColor="@color/textbox_hint"
                    android:textSize="@dimen/sp_12" />
                <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->

                <Spinner
                    android:id="@+id/sp_city"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_textbox"
                    android:overlapAnchor="false" />

                <Spinner
                    android:id="@+id/sp_category"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_textbox"
                    android:overlapAnchor="false" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_textbox"
                    android:hint="@string/title"
                    android:padding="15dp"
                    android:textColor="@color/textbox_hint"
                    android:textColorHint="@color/textbox_hint"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_textbox"
                    android:hint="@string/title"
                    android:padding="15dp"
                    android:textColor="@color/textbox_hint"
                    android:textColorHint="@color/textbox_hint" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_inquiry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_textbox"
                    android:gravity="start"
                    android:hint="@string/desc"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLines="10"
                    android:padding="15dp"
                    android:textColor="@color/textbox_hint"
                    android:textColorHint="@color/textbox_hint" />

                <LinearLayout
                    android:id="@+id/lin_filechoose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/edt_upload"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/capture" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/upload_photos"
                        android:textColor="@color/textbox_hint"
                        android:textColorHint="@color/textbox_hint"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/multiple_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/submit_button2"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_20" />
            </LinearLayout>
        </LinearLayout>
    </com.excuseme.newsapp.apputils.CustomVerticalScrollView>

    <include layout="@layout/bottom_menu" />
</LinearLayout>