<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/gray"
                android:paddingBottom="10dp">
                <ImageView
                    android:id="@+id/edt_logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/upload_story_image"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_your_story"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:textSize="20dp"
                    android:textColor="@color/textbox_hint"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"/>

                <LinearLayout
                    android:id="@+id/lincontact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:visibility="visible">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Guideline: Make sure that any information related to pornographic subjects is strictly prohibited. The behavior of public violation content is also not allowed. Post your own stories &amp; information in a positive way only. Readers can share it if the story feels more adorable."
                        android:textSize="11dp"
                        android:justificationMode="inter_word"
                        android:textColor="@color/textbox_hint"/>
                    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
                    <LinearLayout
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:layout_width="0px"
                        android:layout_height="0px"/>

                       <Spinner
                           android:id="@+id/sp_city"
                           android:layout_width="match_parent"
                           android:layout_height="55dp"
                           android:overlapAnchor="false"
                           android:layout_marginTop="15dp"
                           android:background="@drawable/rounded_textbox"/>

                       <Spinner
                           android:id="@+id/sp_category"
                           android:layout_width="match_parent"
                           android:layout_height="55dp"
                           android:overlapAnchor="false"
                           android:layout_marginTop="15dp"
                           android:background="@drawable/rounded_textbox"/>

                       <EditText
                            android:id="@+id/edt_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_textbox"
                            android:hint="@string/title"
                           android:padding="15dp"
                           android:textColor="@color/textbox_hint"
                           android:textColorHint="@color/textbox_hint"
                            android:visibility="gone"/>
                        <EditText
                            android:id="@+id/edt_heading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_textbox"
                            android:hint="@string/title"
                            android:padding="15dp"
                            android:textColor="@color/textbox_hint"
                            android:textColorHint="@color/textbox_hint"
                            android:layout_marginTop="15dp"/>
                        <EditText
                            android:id="@+id/edt_inquiry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_textbox"
                            android:hint="@string/desc"
                            android:padding="15dp"
                            android:textColor="@color/textbox_hint"
                            android:textColorHint="@color/textbox_hint"
                            android:layout_marginTop="15dp"
                            android:lines="5"
                            android:gravity="top"/>
                       <LinearLayout
                           android:id="@+id/lin_filechoose"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="horizontal"
                           android:gravity="center_vertical"
                           android:layout_marginTop="15dp">
                           <ImageView
                               android:id="@+id/edt_upload"
                               android:layout_width="60dp"
                               android:layout_height="60dp"
                               android:src="@drawable/capture"/>
                           <TextView
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/upload_photos"
                               android:textStyle="bold"
                               android:layout_marginLeft="10dp"
                               android:textColor="@color/textbox_hint"
                               android:textColorHint="@color/textbox_hint" />
                       </LinearLayout>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/multiple_images"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                        <Button
                            android:id="@+id/btn_submit"
                            android:layout_width="180dp"
                            android:layout_height="40dp"
                            android:text="SUBMIT"
                            android:background="@drawable/submit_button"
                            android:textSize="18dp"
                            android:textColor="@color/white"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="25dp"
                            android:layout_marginBottom="10dp" />
                </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_menu" />
</LinearLayout>